# amazon-q-developer-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
build-config/: buildspec-linux.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs  main.rs
crates/agent/src/agent/: compact.rs  consts.rs  mod.rs  permissions.rs  protocol.rs  tool_utils.rs  types.rs
crates/agent/src/agent/agent_config/: definitions.rs  manager.rs  mod.rs  parse.rs  types.rs
crates/agent/src/agent/agent_loop/: mod.rs  model.rs  protocol.rs  types.rs
crates/agent/src/agent/mcp/: actor.rs  mod.rs  service.rs  types.rs
crates/agent/src/agent/rts/: mod.rs  types.rs  util.rs
crates/agent/src/agent/task_executor/: mod.rs
crates/agent/src/agent/tools/: execute_cmd.rs  fs_read.rs  fs_write.rs  grep.rs  image_read.rs  introspect.rs  ls.rs  mcp.rs  mkdir.rs  mod.rs  rm.rs
crates/agent/src/agent/util/: consts.rs  directories.rs  error.rs  glob.rs  mod.rs  path.rs  providers.rs  request_channel.rs  test.rs
crates/agent/src/api_client/: endpoints.rs  error.rs  mod.rs  model.rs  opt_out.rs  request.rs
crates/agent/src/auth/: builder_id.rs  consts.rs  mod.rs
crates/agent/src/aws_common/: http_client.rs  user_agent_override_interceptor.rs
crates/agent/src/cli/: mod.rs  run.rs
crates/agent/src/database/: mod.rs
crates/agent/src/database/sqlite_migrations/: 000_create_migration_auth_state_tables.sql
crates/agent/tests/: mod.rs
crates/agent/tests/common/: mod.rs
crates/agent/tests/mock_responses/: builtin_tools.jsonl  context_window_overflow.jsonl
crates/amzn-codewhisperer-client/: Cargo.toml
crates/amzn-codewhisperer-client/src/: client.rs  config.rs  json_errors.rs  lib.rs  types.rs
crates/amzn-codewhisperer-client/src/client/: create_subscription_token.rs
crates/amzn-codewhisperer-client/src/config/: auth.rs  endpoint.rs  retry.rs
crates/amzn-codewhisperer-client/src/endpoint_lib/: diagnostic.rs
crates/amzn-codewhisperer-client/src/operation/: create_artifact_upload_url.rs  create_subscription_token.rs  create_task_assist_conversation.rs  create_upload_url.rs  create_user_memory_entry.rs  create_workspace.rs  delete_task_assist_conversation.rs  delete_user_memory_entry.rs  delete_workspace.rs  generate_completions.rs  get_code_analysis.rs  get_code_fix_job.rs  get_profile.rs  get_retrievals.rs  get_task_assist_code_generation.rs  get_test_generation.rs  get_transformation.rs  get_transformation_plan.rs  get_usage_limits.rs  list_available_customizations.rs  list_available_models.rs  list_available_profiles.rs  list_available_subscriptions.rs  list_code_analysis_findings.rs  list_events.rs  list_feature_evaluations.rs  list_user_memory_entries.rs  list_workspace_metadata.rs  push_telemetry_event.rs  resume_transformation.rs  (+9 more)
crates/amzn-codewhisperer-streaming-client/: Cargo.toml
crates/amzn-codewhisperer-streaming-client/src/: client.rs  config.rs  lib.rs
crates/amzn-consolas-client/: Cargo.toml
crates/amzn-consolas-client/src/: client.rs  config.rs  lib.rs  types.rs
crates/amzn-qdeveloper-streaming-client/: Cargo.toml
crates/amzn-qdeveloper-streaming-client/src/: client.rs  config.rs  endpoint_lib.rs  event_receiver.rs  lib.rs
crates/chat-cli/: Cargo.toml  telemetry_definitions.json
crates/chat-cli-ui/: Cargo.toml
crates/chat-cli-ui/src/: conduit.rs  legacy_ui_util.rs  lib.rs  protocol.rs
crates/chat-cli-ui/src/ui/: action.rs  mod.rs  tui.rs
crates/chat-cli-ui/src/ui/components/: app.rs  mod.rs
crates/chat-cli/src/: constants.rs  lib.rs  logging.rs  main.rs  request.rs
crates/semantic-search-client/: Cargo.toml  README.md
crates/semantic-search-client/src/: types.rs
docs/: agent-format.md
schemas/: agent-v1.json
(+158 files in other folders)
